<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/listFragment"
        android:icon="?android:attr/actionModeFindDrawable"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_read"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_read" />

    <item
        android:id="@+id/navigation_update"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/title_update" />

    <item
        android:id="@+id/deleteFragment"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/title_delete" />

</menu>